// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  className="sc-furvIG gHrXqh"
>
  <button
    className="sc-caiKgP fQYWrg"
    data-testid="more-reviews"
    onClick={[Function]}
    type="button"
  >
    More Reviews
  </button>
</div>
`;

exports[`matches snapshot 2`] = `
<div
  className="sc-furvIG gHrXqh"
>
  <button
    className="sc-caiKgP fQYWrg"
    data-testid="add-review"
    onClick={[Function]}
    type="button"
  >
    Add Review
  </button>
</div>
`;
